--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
     </style>
 </head>
 <body>
-	<div id="outer">
-		<div id="inner"><h1>GIT ejercicio según FAZT!</h1></div>
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<div id="outer">
+					<div id="inner"><h1>GIT ejercicio según FAZT!</h1></div>
+				</div>
+			</div>
+		</div>
 	</div>
-	
-
-
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
