Agregada direccion del Video

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				<div id="outer">
 					<div id="inner"><h1>GIT ejercicio según FAZT!</h1></div>
 				</div>
+				<p class="lead">Ventana externa: <a href="https://www.youtube.com/watch?v=HiXLkL42tMU" target="_blanck">Video Fazt</a></p>
 			</div>
 		</div>
 	</div>
