--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/login.css">
 	<title>GIT Login según FAZT!</title>
 	<style>
     #outer {
@@ -20,23 +21,23 @@
 		<div class="row">
 			<div class="col">
 				<div id="outer">
-					<div id="inner"><h1>GIT ejercicio según FAZT!</h1></div>
-					<form class="form-signin">
-						<img class="mb-4" src="/docs/4.2/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-						<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-						<label for="inputEmail" class="sr-only">Email address</label>
-						<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-						<label for="inputPassword" class="sr-only">Password</label>
-						<input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-						<div class="checkbox mb-3">
-							<label>
-								<input type="checkbox" value="remember-me"> Remember me
-							</label>
-						</div>
-						<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-						<p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
-					</form>
+					<div id="inner"><h1>GIT Login según FAZT!</h1></div>
 				</div>
+				<form class="form-signin text-center">
+					<img class="mb-4" src="img/bootstrap-solid.svg" alt="" width="72" height="72">
+					<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+					<label for="inputEmail" class="sr-only">Email address</label>
+					<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+					<label for="inputPassword" class="sr-only">Password</label>
+					<input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+					<div class="checkbox mb-3">
+						<label>
+							<input type="checkbox" value="remember-me"> Remember me
+						</label>
+					</div>
+					<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+					<p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
+				</form>
 			</div>
 		</div>
 	</div>
