--- a/index.html
+++ b/index.html
@@ -16,16 +16,33 @@
     </style>
 </head>
 <body>
-	<div class="container">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+		<a class="navbar-brand" href="/git">GIT</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarGit" aria-controls="navbarGit" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarGit">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="/git">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/git/login.html">Login</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<main role="main" class="container">
 		<div class="row">
 			<div class="col">
 				<div id="outer">
-					<div id="inner"><h1>GIT ejercicio según FAZT!</h1></div>
+					<div id="inner"><h1>Ejercicios sobre GIT Básico!</h1></div>
 				</div>
 				<p class="lead">Ventana externa: <a href="https://www.youtube.com/watch?v=HiXLkL42tMU" target="_blanck">Video Fazt</a></p>
+				<p class="lead">Ventana externa: <a href="https://www.youtube.com/watch?v=QGKTdL7GG24" target="_blanck">Video Makigas</a></p>
 			</div>
 		</div>
-	</div>
+	</main>
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
